--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script async defer
+            src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCQOBc4Ov8uW2hnucJsZTeKmHqo-dZdNmQ&v=3&callback=initMap">
+    </script>
   </body>
 </html>
