--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script async defer
-            src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCQOBc4Ov8uW2hnucJsZTeKmHqo-dZdNmQ&v=3&callback=initMap">
-    </script>
+    <!--<script async defer-->
+            <!--src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCQOBc4Ov8uW2hnucJsZTeKmHqo-dZdNmQ&v=3&callback=initMap">-->
+    <!--</script>-->
   </body>
 </html>
