fix for map center, markers in wrog places

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Map of my neighborhood parks</title>
   </head>
   <body>
     <noscript>
@@ -36,9 +36,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
-    <!--<script async defer-->
-            <!--src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCQOBc4Ov8uW2hnucJsZTeKmHqo-dZdNmQ&v=3&callback=initMap">-->
-    <!--</script>-->
   </body>
 </html>
